--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           </svg>
 
         </div>
-    <!-- <p class="caption">By Jeremy C.F. Lin</p> -->
+    <p class="caption">Source: California State University, Long Beach</p>
     <!--     </div> -->
        
         <p>As a white woman, Cauley is a statistical unicorn in the dray. She said she spent the early years just proving herself among the men, fighting for containers, while trying to save up enough to move her sons out of the projects. In another life, she had dreamt of being a wedding caterer. But at the time, 10 years ago, port trucking seemed like the quickest way to turn things around. And it was way easier to get into than dental hygiene school.</p>
