--- a/three.html
+++ b/three.html
@@ -121,6 +121,7 @@
             </g>
           </svg>
         </div>
+        <p class="caption">California Department of Labor Standards Enforcement </p>
 
         <p>Of the $22.3 million levied by the labor commissioner, only $2.7 million has been paid out so far in the dray, according to records obtained by the IRP. The total levied does not include all cases in late 2015 and 2016, so it’s likely the payment disparity is even greater. “It’s like missing the punchline on our whole joke,” said Sheheryar Kaoosji at LAANE. And companies are even less likely to pay when the civil suits start piling on</p>
 
@@ -238,10 +239,13 @@
             <div class="flow-des">
               <p class="fix-margin-top"> The final leg of the logistics chain is you. Consumers -- the market -- controls the top of the logistics chain, setting prices and demanding certain goods at a certain time. <span class="money">All money flows first from your wallet.</span></p>
             </div>
+             <p class="caption">Source: Port of Los Angeles and the National Economic Law Project </p>
           </div>
       </div>
      <!--  <img src="assets/icon/arrow.png" class="img-responsive center-block "> -->
+
   </div>
+
 </div>
 
 
@@ -572,7 +576,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
        
         <!-- <p>Listicle mlkshk kombucha, truffaut readymade man braid YOLO austin gentrify butcher polaroid tacos cliche. Brooklyn authentic whatever paleo intelligentsia hashtag freegan. Meggings butcher cornhole direct trade scenester. Brunch deep v 3 wolf moon, DIY sriracha kombucha pickled retro synth shabby chic post-ironic distillery letterpress butcher flannel. Chillwave chambray single-origin coffee sartorial, whatever austin VHS put a bird on it fashion axe freegan. Ramps organic fashion axe etsy brunch. Forage beard tofu echo park.</p>
         <video autoplay loop preload muted width="100%" src="assets/images/test.gif" data-src="assets/video_looping/establishing-shot.mp4" class="lazy">
@@ -626,6 +630,9 @@
 
         <p><span class="credit-titile">Special thanks to:</span></p>
         <p class='indent'>UC Berkeley Graduate School of Journalism, The Investigative Reporting Program,Lowell Bergman, Tim McGirk, Richard Koci Hernandez, Justin George, Abbie VanSickle, Jeremy Rue, Bob Bishop</p>
+
+        <p><span class="credit-titile">Icons inspired by:</span></p>
+         <p class='indent'>Rflor, Creative Stall, Alex Auda Samora, Marie Van den Broeck, Mani Amini, Brian Oppenlander, The Noun Project.</p>
         <!-- <p>The Investigative Reporting Program 
         <p>Lowell Bergman 
         <p>Tim McGirk
