--- a/two.html
+++ b/two.html
@@ -112,8 +112,10 @@
         <h3 class="g-title">A Tale of Two Ports</h3>
         <h4 class="g-subtitle">Los Angeles and Long Beach combine for 40 percent of the country’s container traffic.</h4>
       </div>
-      <p class="data-source">Data Source: UCBerkeley</p>
+ <!--      <p class="data-source">Data Source: UCBerkeley</p> -->
         </div>
+        <p class="caption">Source: California State University, Long Beach</p>
+
       </div>
     </div>
     
@@ -590,7 +592,7 @@
 
 <div class="container section" id="test">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0"> 
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix"> 
 
         <div class="previous-chapter">
            <a href="index.html"><div class="arrow-left mobile-hide"></div></a>
