fixed font size for mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <div class="container story_intro">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">
        <p data-acnhor-target=".story_intro" data-center="opacity:0;" data-center-bottom="opacity:1">Port truck drivers work a sliver of the supply chain -- hauling shipping containers from dockyard to warehouse, usually not more than a few miles. The strip of land is called the ‘dray.'</p>
 
        <p data-center="opacity:0;" data-center-bottom="opacity:1">Along with the rest of the trucking sector, their industry was deregulated in the 80s. Hundreds of thousands of truckers, mostly poor, mostly immigrant, flooded the market, increasing competition while driving down shipping costs -- along with truckers’ wages and working conditions. As a cost-saving measure, companies took advantage of this cheap, high-turnover fleet by labeling their drivers independent contractors instead of employees.</p>
@@ -108,14 +108,14 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container mobile-fix">
 <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">    
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">    
     <iframe src="https://player.vimeo.com/video/165714128"  id="teaser" width="100%" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 </div>
 </div>
-<div class="container section" id="first-sec">
+<div class="container section mobile-fix" id="first-sec">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <h1 class="section_titles">Cycle of exploitation</h1>
@@ -333,7 +333,7 @@
           </svg>
 
         </div>
-    <p class="caption">Source: California State University, Long Beach</p>
+    <p class="caption">Source: California State University, Long Beach </p>
     <!--     </div> -->
        
         <p>As a white woman, Cauley is a statistical unicorn in the dray. She said she spent the early years just proving herself among the men, fighting for containers, while trying to save up enough to move her sons out of the projects. In another life, she had dreamt of being a wedding caterer. But at the time, 10 years ago, port trucking seemed like the quickest way to turn things around. And it was way easier to get into than dental hygiene school.</p>
