--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <div class="container section">
+  <div class="container section mobile-fix">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
         <p>There are about 75,000 more drivers all over the country in similar positions. But because the entire industry is built on this model of non-employment -- not unlike that of Uber -- companies can’t afford to change now, let alone pay years of back wages. Taking on the labor costs of an employee fleet is a dangerous proposition in the hyper-competitive port trucking market, where margins are razor-thin.</p>
@@ -165,7 +165,7 @@
   </div>
 
 
-  <div class="container section">
+  <div class="container section mobile-fix">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
         <p>The IRP found that less than 10 percent of successful wage claims in port trucking have been paid out, a chronic symptom of backlog at the state’s embattled labor commissioner, coupled with the industry’s many escape routes. Some of the awards are so high that companies can’t afford to honor them -- as much as $300 thousand per driver in some cases. The state government doesn’t have the legal authority or manpower for sweeping policy change to help drivers before they need to sue their bosses. “It’s never been [our] intent to reclassify,” said Edna Garcia Earley, a lawyer with the labor commissioner. “We just want them to properly classify their workers under the law.”</p>
@@ -185,7 +185,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p>Other major port cities have similar programs, but not the legal or political climate to do much about it. Likewise, the federal government has been slow to step in with policy reform because of the trucking sector’s of insulation and deregulation, going back to the Motor Carrier Act of 1980, when companies shifted to independent contractors -- also called “owner operators” -- to cut costs and remain competitive.</p>
@@ -195,14 +195,14 @@
   </div>
 </div>  
 
-<div class="container-fluid section">
+<div class="container-fluid section mobile-fix">
   <div class="quotebox">
       <img src="https://s3-us-west-2.amazonaws.com/port-feudal/img_jesse_looking.jpg"  class="img-responsive center-block quoteimg">
       <p class="imgQuote" id="imgQuote1">“This business makes you away from your family, my two daughters. I learned the hard way. Eight years I struggled.”<span class="interview">Jesse Zuniga, employee port truck driver in Oakland, California.</span></p>
   </div>
 </div>
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
 
@@ -216,7 +216,7 @@
 </div>
 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
 <!--     <div class="col-sm-6 col-sm-offset-3">    
   
@@ -256,7 +256,7 @@
   </div>
 </div>
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">   
 
@@ -271,7 +271,7 @@
 
 
 
-<div class="container section">
+<div class="container section mobile-fix">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p><span class="firstcharacter">C</span>hristy gets on her dad about the pills. He forgets to take them sometimes. But he’s conscientious, diligent about dabbing the corners of his mouth with a napkin every couple minutes. Boca bien? he asks her. When recounting his story, a life of hard work and poverty, he speaks with steady clarity. The one time he did cry, though, he made a point to shield his face from Christy, who handed him another napkin.</p>
@@ -306,7 +306,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <img src="assets/images/test.gif" data-src="https://s3-us-west-2.amazonaws.com/port-feudal/img_cauley_bw.jpg"  class="img-responsive center-block photo photo-medium lazy">    
@@ -356,7 +356,7 @@
   </div>
 </div>  -->
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <p>Deregulation had a noble impetus, encouraged by liberals and conservatives alike: stave runaway inflation from the 70s and provide more supply-chain jobs in low-income communities, via competition and international trade. Port trucking, for instance, could now offer work for urban families (unlike most of trucking they drive in a fixed location by the harbor.) “Despite these high hopes,” Rutgers economist and port trucking expert David Bensman explains, “deregulation wrecked the drayage industry:”</p>
@@ -372,7 +372,7 @@
     </div>
   </div>
 </div> 
-<div class="container section ">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">  
         <p>The dray spread particularly thin while global trade expanded during the retail boom of the 90s. “While deregulation of trucking has negatively impacted working conditions for many truck drivers,” another study notes, “it is the ‘drayers’ who face the most severe circumstances.””</p>
@@ -380,14 +380,14 @@
   </div>
 </div> 
 
-<div class="container-fluid section">
+<div class="container-fluid section mobile-fix">
   <div class="quotebox">
       <img src="assets/images/test.gif" data-src="https://s3-us-west-2.amazonaws.com/port-feudal/dipt3.jpg" class="img-responsive center-block photo lazy quoteimg">
       <p class="imgQuote mobile-hide" id="imgQuote2">“There's a lot of guys who are two paychecks away from being out on the street.”<span class="interview">Kelsey Frasier, Teamsters shift manager in Oakland, Calif.</span></p>
   </div>
 </div>
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
       <p>In the vast San Pedro complex (Los Angeles and Long Beach combined) 85 percent of drayage companies have less than 100 drivers, and 87 percent use exclusively owner operators who file 1099s. Those owner operators are considered their own little companies working for slightly larger little companies. Drivers average about 11 hours a day, with somewhere between five and eight hours spent waiting; 95 percent reported no pension or retirement plan, only 10 percent have health insurance. The median income is $25,000. Those numbers are consistent with New York, home to the country’s third largest port, where David Bensam found independent contractors earned an average of $28,000 for 60 hours of work per week. Likewise in Seattle, Atlanta, and most other port cities academics have studied.</p>
