another commit argh

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <div class="next-chapter">
-          <a href="two.html"><div class="arrow-right mobile-hide"></div></a>
+          <a href="two.html"><div class="arrow-right></div></a>
         <div>
             <p class="next">Next Part</p>
             <a href="two.html" target="_blank"><p class="next-title">PART II</p></a>
