--- a/two.html
+++ b/two.html
@@ -73,9 +73,9 @@
   </div>
 </div>
 
-<div class="container story_intro" id="pTwo-intro">
+<div class="container story_intro mobile-fix" id="pTwo-intro">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">
        <p data-acnhor-target="#pTwo-intro" data-center="opacity:0;" data-center-bottom="opacity:1">There is one uncontested observation in every port city: The air is poison. It’s poison because miles of old idling trucks belch diesel exhaust into the sky every day, filling the lungs of those who live nearby, usually poor communities. Child asthma rates soar and life expectancy plummets. Los Angeles and Long Beach, the two busiest ports in the country, decided to do something about it in 2007.</p>
 
        <p data-center="opacity:0;" data-center-bottom="opacity:1">The Clean Air Action Plan was the first significant piece of regulation introduced to the trucking industry since 1980. The ports required all companies to replace their drayage fleet -- clunkers a breath away from the junkyard -- with new models. But retrofitting some 10,000 trucks at about $110,000 each was no simple task. Most companies, while in support of the clean trucks, were not willing (or able) to pay for them. Who, then, would come to bear the burden of clean air?</p>
@@ -91,7 +91,7 @@
 <p class="caption">Cargo ships anchored in the Los Angeles Harbor during West Coast port congestion, last spring, stretching for miles into the Pacific. <span class="attribution">Photo courtesy of Mike Kelley</span></p>
 
 
-<div class="container section" >
+<div class="container section mobile-fix" >
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">    
         <p class="first-p"><span class="firstcharacter">M</span>AY 2010 -- “We are called independent contractors, but all we are is employees with expenses,” Jose Covarrubias testified, waving a petition with more than 600 drivers’ signatures. He was in a suit, behind a microphone, at the end of a panel with other men in suits behind microphones. “Our bosses tell this lie so they can make us pay for the company trucks.” The bosses to his left looked forward.</p>
@@ -106,7 +106,7 @@
 
         
     </div>
-    <div class="col-sm-4 col-sm-offset-2">
+    <div class="col-sm-4 col-sm-offset-2 mobile-fix">
       <div class="g-graphic">
       <div id="g-multiline">
         <h3 class="g-title">A Tale of Two Ports</h3>
@@ -129,7 +129,7 @@
 </div> -->
 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">       
 
@@ -149,7 +149,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="long-quote">“A lot of companies went to the leasing model because that was a way to keep drivers,” said Marqus Coleman, an operations manager at Quik Pick Express, which is currently defending a class action lawsuit. It’s big customer is Fiji Water. “It kind of bypassed the whole clean initiative. We’re still going to get our money just on the back end. We’re going to buy the truck and have you buy into it and it’s a win win for us.”</p>
@@ -157,7 +157,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-0 mobile-fix">
         <p class="text-center">***</p><hr>
@@ -168,7 +168,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="facts">Potter called the model “sharecropping-on-wheels,” forcing drivers like Covarrubias to choose food for their family or truck maintenance. Joe Rajkovacz, then regulatory director at the Owner-Operator Independent Drivers Association, is a longtime champion of independent contractors in trucking (and vocal critic of the Teamsters.) But even he said these agreements are “rent-to-own schemes,” “involuntary servitude” that “makes the payday loan industry look ethical.”</p>
@@ -176,7 +176,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
@@ -195,7 +195,7 @@
   <p class="caption">Drivers spend most of their time waiting in traffic outside the terminal. If they sleep, they may get cut in line. And harbor regulations forbid exiting the cab, even to use the bathroom in most cases.</p>
 </div>
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix"> 
 
@@ -206,7 +206,7 @@
   </div>
 </div> 
 
-<div class="container section transcriptOne transcript" id="#transcriptTwo">
+<div class="container section transcriptOne transcript mobile-fix" id="#transcriptTwo">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p class="democrat"><span class="conversation">DEFAZIO:</span> “Have you required that [companies] discount the price for the amount of the subsidy if they are leasing the truck to an owner-operator?</p>
@@ -220,7 +220,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
@@ -232,9 +232,9 @@
 <img src="assets/images/test.gif" data-src="https://s3-us-west-2.amazonaws.com/port-feudal/img_driver_grill2.jpg" class="img-responsive center-block photo lazy">
 <!-- <img src="assets/images/test.gif" data-src="assets/illustrations/truck-sitter2.jpg" class="img-responsive center-block photo lazy"> -->
 
-<p class="caption">A driver inspects his wheels outside the terminal at the Port of Oakland. Independent contractors are responsible for the maintenance of their trucks, even though most don’t actually own them.</p>
+<p class="caption mobile-fix">A driver inspects his wheels outside the terminal at the Port of Oakland. Independent contractors are responsible for the maintenance of their trucks, even though most don’t actually own them.</p>
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p>Representative <span class="democrat-person">Jerrold Nadler (D)</span> from New York worked over ATA vice president and attorney <span class="holmes-person">Robert Digges</span> on the language in the agreements. Several of the leases stipulate that, should a driver break the contract, he’s on the hook for the remaining balance. “This would be totally coercive,” Nadler said, “Would it not be?” Digges conceded that much, “under the strict terms of your question.” DeFazio and others promised to subpoena the companies, investigate the lease agreements, and return to the issue after some of the confusion cleared.</p>    
@@ -242,7 +242,7 @@
   </div>
 </div> 
 
-<div class="container section transcript" id="#transcriptOne">
+<div class="container section transcript mobile-fix" id="#transcriptOne">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="democrat"><span class="conversation">NADLER:</span> Many trucking companies now put drivers in company-owned trucks and pay them a flat percentage of the rate they receive from the shipper. With no ownership, lease, or any other legal interest in the truck, these drivers would normally be considered employed, showing up every day at the same company for the same jobs. But the companies brazenly force them to sign independent contract agreements and issue 1099s. Are you familiar with this practice?</p>
@@ -278,7 +278,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
@@ -295,7 +295,7 @@
   </div>
 </div> 
 
-<div class="container-fluid section" id="quotePlayer2">
+<div class="container-fluid section mobile-fix" id="quotePlayer2">
   <div id="quoteImg2">
     <p id="quote3" class="mobile-hide"><span id="first_quote"></span><br><span class="interview">Julio Garcia, independent port truck driver, Los Angeles, Calif.</span></p>
     <img src="https://s3-us-west-2.amazonaws.com/port-feudal/dipt2.jpg" class="img-responsive center-block photo photo-large ">
@@ -304,7 +304,7 @@
 
 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
@@ -334,7 +334,7 @@
   </div>
 </div> -->
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
@@ -355,7 +355,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="long-quote">“With the regulation and economic reality, we felt that we had no choice. It's a funny thing because that fact has been used against us in several of these suits. It’s sort of under the heading of no good deed goes unpunished.”</p>
@@ -370,7 +370,7 @@
 
 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">
       <p class="text-center">***</p>      
@@ -386,7 +386,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p class="long-quote">“This,” the judge said, “hardly sounds like treatment of independent contractors.”</p>
@@ -395,7 +395,7 @@
 </div> 
 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
       <p>Every individual misclassification hearing and court case uses a complex matrix of factors because no all-inclusive definition of “employee” can be applied in broad strokes. The IRS has a different definition than the National Labor Relations Board, for instance. But they’re all vague enough to invite interpretation at every step. Just because this port truck driver is misclassified, doesn't mean they all are. Nonetheless, in sectors spread as thin as logistics, certain industries feel comfortable abandoning employees all together.</p>
@@ -408,7 +408,7 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section mobile-fix">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
