fixed margin left bug

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </nav>
 </div> -->
 
-<div class="container story_intro second-page">
+<div class="container story_intro >
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 mobile-fix">
        <p data-acnhor-target=".story_intro" data-center="opacity:0;" data-center-bottom="opacity:1">Port truck drivers work a sliver of the supply chain -- hauling shipping containers from dockyard to warehouse, usually not more than a few miles. The strip of land is called the ‘dray.'</p>
