--- a/three.html
+++ b/three.html
@@ -76,7 +76,7 @@
 </nav>
 </div> -->
 
-<div class="container story_intro">
+<div class="container story_intro mobile-fix"">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 mobile-fix">
        <p data-acnhor-target=".story_intro" data-center="opacity:0;" data-center-bottom="opacity:1">More than 60 different drayage companies have been dragged before hearing officers at the labor commissioner since the clean trucks program. They’ve lost 99 percent of the time. Some appeal, and then they lose again in court. Once a driver is found misclassified, they’re owed years of expense reimbursements, overtime and missed rest breaks. The judgements levied against them can total in the millions -- hundreds of thousands for individual drivers. A financial setback for some companies, but a fatal blow for most.</p>
@@ -90,7 +90,7 @@
   </div>
 </div>
 
-<div class="container section" id="first-sec">
+<div class="container section mobile-fix" id="first-sec">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <!-- <h1 class="section_titles">Paper Tigers</h1> -->
@@ -133,7 +133,7 @@
     </div>
   </div>
 
-  <div class="container section">
+  <div class="container section mobile-fix"">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
   
@@ -167,7 +167,7 @@
 
 
 
-  <div class="container section">
+  <div class="container section mobile-fix"">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
         <p><span class="firstcharacter">Q</span>TS filed for bankruptcy in August 2014, hitting the stop button on its many pending civil cases. The Wage Justice Center has since sued for “consolidation” in bankruptcy court, asking a jury to lump together all of the companies that have the same owners, cash flows and equipment, so that drivers can recoup the “ill-gotten gains” that the company is “shielding, through corporate shell games.”</p>
@@ -180,7 +180,7 @@
   </div>
 
 
- <div class="container section">
+ <div class="container section mobile-fix"">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
 
@@ -249,7 +249,7 @@
 </div>
 
 
-  <div class="container section">
+  <div class="container section mobile-fix"">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
 
@@ -280,7 +280,7 @@
 
          <p class="caption">A forklift moves a 20-foot container in the Port of Oakland’s busy Ports America terminal after the union and its employers reached a tentative agreement in February. <span class="attribution">Photo by Brett Murphy</span></p>
          <div class="col-sm-6 col-sm-offset-3">  -->
-<div class="container section">
+<div class="container section mobile-fix"">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p class="text-center">***</p>
@@ -321,7 +321,7 @@
   </div>
 </div> -->
 
-<div class="container section">
+<div class="container section mobile-fix"">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
 
@@ -348,7 +348,7 @@
 
 <p class="caption">A forklift moves a 20-foot container in the Port of Oakland’s busy Ports America terminal after the union and its employers reached a tentative agreement in February. <span class="attribution">Photo by Brett Murphy</span></p> -->
 
-<div class="container section">
+<div class="container section mobile-fix"">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
   
@@ -367,13 +367,13 @@
 
         <p>For him, it’s been especially expensive. He paid out almost $600,000 in misclassification claim settlements in 2014 and 15. Then the labor commissioner levied almost $7 million more in claims this past March.</p>
 
-        <p>John Rosenthal is the president of an equity firm that owns TTSI. He said the political and legal climate flipped without fair warning, that companies never had a chance to comply because nobody, not even regulators, understood the law.</p>
+        <p>An executive familiar with TTSI, who asked to remain anonymous, said the political and legal climate flipped without fair warning, that companies never had a chance to comply because nobody, not even regulators, understood the law.</p>
 
       </div>
   </div>
 </div>
 
-<div class="container-fluid section">
+<div class="container-fluid section mobile-fix"">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2 mobile-fix">  
         <p class="long-quote">“We used the best lawyers we could find,” Rosenthal said. “Every company I’m sure did. Why is it that they got it wrong? Why is it, five years later, that the courts are uniformly saying that despite the fact you used your best effort, despite the fact that you read the law and you had it was interpreted by council, you were wrong five years ago. We are going to now impose what is effectively a new standard, expo facto. And we are going to impose millions of dollars of fines. That is what is happening today.”</p>
@@ -423,7 +423,7 @@
 
 
 
-<div class="container section">
+<div class="container section mobile-fix"">
     <div class="row">
      <div class="col-sm-6 col-sm-offset-3 mobile-fix">
 
@@ -574,7 +574,7 @@
 
 
 
-<div class="container section">
+<div class="container section mobile-fix"">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
        
