--- a/two.html
+++ b/two.html
@@ -295,10 +295,11 @@
   </div>
 </div> 
 
-<div class="container-fluid section mobile-fix" id="quotePlayer2">
-  <div id="quoteImg2">
-    <p id="quote3" class="mobile-hide"><span id="first_quote"></span><br><span class="interview">Julio Garcia, independent port truck driver, Los Angeles, Calif.</span></p>
+<div class="section" id="quotePlayer2">
+  <div id="quotebox">
     <img src="https://s3-us-west-2.amazonaws.com/port-feudal/dipt2.jpg" class="img-responsive center-block photo photo-large ">
+    <p class="imgQuote" id="jesseQuote"><span id="first_quote"></span><br><span class="interview">Julio Garcia, independent port truck driver, Los Angeles, Calif.</span></p>
+    
   </div>  
 </div>
 
